kustomize/rancher/base/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

  name: rancher-stable
spec:
  ingressClassName: alb
  rules:
  - host: devunifiedplatform.com
    http:
      paths:
      - backend:
          service:
            name: rancher-stable
            port:
              name: http
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - devunifiedplatform.com
    secretName: tls-rancher-ingress
